tests/harness/errors/114_deep_nested_destructure.eu
f([a, [b, [c, d]]]): a
result: f([1, [2, [3, 4]]])
